--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Controllers\LienCapTHCSController.cs" />
     <Compile Include="Controllers\LienCapTieuHocsController.cs" />
     <Compile Include="Controllers\ThiSinhDangKiesController.cs" />
+    <Compile Include="Controllers\ThongBaoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -481,7 +482,6 @@
     <Content Include="Areas\Admin\Views\HocVienDangKys\DsHvDangKy_Update.cshtml" />
     <Content Include="Areas\Admin\Views\HocVienDangKys\AdminUpdateHocVien.cshtml" />
     <Content Include="Areas\Admin\Views\HocVienDangKys\AdminCreateHocVien.cshtml" />
-    <Content Include="Areas\Admin\Views\TongHopSoLieuDKXTs\TheoDoiNopLePhi.cshtml" />
     <Content Include="Areas\Admin\Views\TongHopSoLieuDKXTs\TheoDoiNopHoSo.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtkqDgnl_hs_view.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtKQTthpt.cshtml" />
@@ -498,6 +498,7 @@
     <Content Include="Areas\Admin\Views\TongHopSoLieuDKXTs\TheoDoiNopHoSoDetailPt5.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\Dkdttnk_hs_view.cshtml" />
     <None Include="Areas\Admin\Views\DotXetTuyens\GiftedIndex.cshtml" />
+    <Content Include="Areas\Admin\Views\DotXetTuyens\MasterIndex - Copy.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -513,164 +514,6 @@
     <Content Include="Scripts\scripts.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
-    <Content Include="Uploads\DKDTNangKhieuFile\1_20230711_111523_2.jpg" />
-    <Content Include="Uploads\DKDTNangKhieuFile\1_20230711_111922_34-20230630084001-e.jpg" />
-    <Content Include="Uploads\DKDTNangKhieuFile\1_20230711_121858_2.jpg" />
-    <Content Include="Uploads\DKDTNangKhieuFile\1_20230711_123012_2.jpg" />
-    <Content Include="Uploads\DKDTNangKhieuFile\1_20230711_123257_2.jpg" />
-    <Content Include="Uploads\DKDTNangKhieuFile\1_20230718_090820_loi.PNG" />
-    <Content Include="Uploads\DKDTNangKhieuFile\1_20230718_111958_cntt.jpg" />
-    <Content Include="Uploads\DKDTNangKhieuFile\1_20230718_162258_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0001.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0002.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0003.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0004.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0005.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0006.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0007.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0008.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0009.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0010.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0011.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0012.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0013.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0014.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0015.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0016.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0017.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0018.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0019.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0020.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0021.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0022.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0023.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0023.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0024.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0025.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0026.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0027.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0027.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0028.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0028.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0029.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0325767035_133314834983767617_146CF03A-CAF3-4EA8-B327-96106AF57EBC.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0325767035_133314834983935848_4F64B2D2-A2BE-4448-B327-3E3F468F5173.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0332307843_133331977521972640_1688724118670..jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0349288458_133333917293840467_C1B740EF-CDFD-42CF-9F77-CF033C75E2C7.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0349288458_133333917293860413_E306EBD6-EF0F-4B8E-806D-0FDEEFC5F0C7.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0349436700_133325683031421698_20230518_075638.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0349436700_133325683031421698_20230518_075650.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0349436700_133325683302947761_20230518_075623.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0349436700_133325683302947761_20230518_075638.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0349436700_133325683302947761_20230518_075650.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0349436700_133325683488859889_20230518_075623.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0349436700_133325683488859889_20230518_075638.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0349436700_133325683488859889_20230518_075650.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0349823286_133328511314345711_inbound2077152713545117391.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0359458848_133321457175741779_Chứng chỉ IELTS-Lê Anh Quân.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0362355970_133309196958240578_noimage.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\038305025743_133321367583478796_02A8AFD0-269F-443F-9B00-2F45026E5B6E.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\038305025743_133321367583478796_3D3CA0B5-F66E-43EE-B7DC-7153C8B420DE.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0389012502_133329088599161537_D50C214B-871E-41E9-A2E5-DF48AC75E686.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0389012502_133329088599171510_94028140-D244-472B-AB8C-066644370D5B.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0389012502_133329088599181490_40FDFBC1-13F0-4E93-9F22-644E8D847CEA.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0389012502_133329088599191463_51D4A89A-4753-4470-8A38-1DA359CE2430.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0389012502_133329088599191463_837B00C8-B34C-42D7-BD4F-C6C88E7B93B4.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0389012502_133329088599390928_6925EC03-0871-44B9-B603-C55716D8CEDC.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0392040859_133313153858549008_JPEG_20230615_220903_3205112267331921459.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0392040859_133313154531740230_JPEG_20230615_220903_3205112267331921459.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0392040859_133313154711893653_JPEG_20230615_220903_3205112267331921459.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0812883636_133308851859558522_122045999_2810625402517539_4159568394874132591_n.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0867658216_133320725144623257_inbound3812985642596128500.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0869699250_133328726684452663_D236CDFA-1713-4813-8510-0A79B41CDDB1.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0869699250_133328730007230123_0863B151-90B8-4A3F-B83F-131C846DB3ED.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0869699250_133328730007230123_B0D6E957-881F-447C-BCC8-B3AF9E3DD29F.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0901743635_133310452444060013_inbound4482632244118335133.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0906258456_133311171048830017_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0932317022_133321374061214952_IMG20230624185611.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0943265943_133318296248622038_IMG_4796.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0943265943_133320559588963411_IMG_4796.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0943265943_133320559588963411_IMG_4801.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310852342538674_00DD43F7-B1D1-4553-A499-E566ED1FAC37.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310852342538674_37ADD565-82F9-4597-B3B6-F3A8A2B071DD.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310852342538674_3AADC192-6CE1-4F9F-BCC6-399552CC19F6.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310852721231772_F2D27A05-58AF-4F5D-A326-17EC71A15D7D.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310852721388020_00DD43F7-B1D1-4553-A499-E566ED1FAC37.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310852721388020_37ADD565-82F9-4597-B3B6-F3A8A2B071DD.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310852721388020_3AADC192-6CE1-4F9F-BCC6-399552CC19F6.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310852721388020_633B27C5-C4DE-4218-8121-B450B3E31634.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310853012706324_00DD43F7-B1D1-4553-A499-E566ED1FAC37.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310853012706324_37ADD565-82F9-4597-B3B6-F3A8A2B071DD.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310853012706324_3AADC192-6CE1-4F9F-BCC6-399552CC19F6.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310853012706324_633B27C5-C4DE-4218-8121-B450B3E31634.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0965523961_133310853012706324_F2D27A05-58AF-4F5D-A326-17EC71A15D7D.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0967255035_133314913781601836_3bd65810e205335b6a14.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\0971376025_133321368456628871_9A7E95E4-F287-495D-9952-8DD2F26B654E.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0971376025_133321368456628871_F28CC62D-E03F-485F-A629-D3E4D8667627.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\0989194765_133308685703499594_image.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_133308580529003561_ttdpt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_133308703556543621_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_133330984254089672_sptin.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230706_133810_sptin.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230706_142536_minh.PNG" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230706_142638_sptin.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230706_150000_sptin.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230706_150107_smile-small.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230706_151511_25acddb3da54207bc6beb5838f65f022feaa81d7.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230706_151824_25acddb3da54207bc6beb5838f65f022feaa81d7.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230706_153409_25acddb3da54207bc6beb5838f65f022feaa81d7.jpeg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230706_161005_smile-small.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230707_102306_2.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230707_102330_2.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230707_104000_2.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230707_110740_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230707_143716_2.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230718_161918_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230718_161940_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230718_162318_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230718_162854_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230718_163050_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230718_163245_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230718_163613_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230718_163919_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230718_164225_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_135206_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_135331_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_135523_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_140236_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_140448_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_140849_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_140941_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_141116_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_141207_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_141426_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_141827_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_142036_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_142055_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_144904_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_144956_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_192823_loi.PNG" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_200207_loi.PNG" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_200304_loi.PNG" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230719_200304_minh.PNG" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230720_110812_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230720_112532_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230720_112559_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230720_165537_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230720_165552_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230720_165552_ts001.png" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230720_165906_ts001.png" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230726_174330_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230726_174537_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230726_175129_cntt.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\f_133308851645091562_67370344_1349279898569314_6014713798076661760_n.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\noimage.jpg" />
-    <Content Include="Uploads\DKXTHocBaFile\t1.jpeg" />
-    <Content Include="Uploads\LienCapTieuHoc\GiayUuTien\2_133330916848999561_minh.PNG" />
-    <Content Include="Uploads\LienCapTieuHoc\MinhChungLePhi\2_133330916848999561_cntt.jpg" />
-    <Content Include="Uploads\LienCapTieuHoc\MinhChungMN\1234567890_133330921359519443_sptin.jpg" />
-    <Content Include="Uploads\LienCapTieuHoc\MinhChungMN\2_133330916848973918_cntt.jpg" />
-    <Content Include="Uploads\LienCap\HocBa\4_202307231119124101_cntt.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -693,28 +536,6 @@
     <None Include="Views\Auth\RegisterColleger.cshtml" />
     <Content Include="Views\Auth\Register.cshtml" />
     <Content Include="Views\Auth\ResetPassword.cshtml" />
-    <Content Include="Uploads\DKXTHocBaFile\0030.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\0352837956_133339049998062514_Hoc_ba_Nguyen_Van_Chuong.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\0352837956_133339050772446051_Hoc_ba_Nguyen_Van_Chuong.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\0392840284_133308796738961114_IMG_0395-hình ảnh.zip" />
-    <Content Include="Uploads\DKXTHocBaFile\0397344748_133317106724196753_inbound161335894132509242.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\0397344748_133317107171815392_inbound161335894132509242.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\0397344748_133323289827133656_inbound1651588352196451458.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\0878313999_133320553841832090_TỆP HỌC BẠ.rar" />
-    <Content Include="Uploads\DKXTHocBaFile\0878313999_133320554608125394_TỆP HỌC BẠ.rar" />
-    <Content Include="Uploads\DKXTHocBaFile\0878313999_133320555273839537_TỆP HỌC BẠ.rar" />
-    <Content Include="Uploads\DKXTHocBaFile\0932494569_133309320341071929_học bạ lớp 11,12.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\0932494569_133309320852826698_học bạ lớp 11,12.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\0941537993_133308675908659223_inbound7866099615972904433.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\0962941853_133311424090849042_học bạ.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\0966768317_133308774482898739_Học bạ.pptx" />
-    <Content Include="Uploads\DKXTHocBaFile\1_133330987930230864_vd.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230707_103731_6.-Thong-bao-tuyen-sinh-Ban-moi-thang-6-nam-2023-Cap-nhat-quy-che-TS%2812.06.2023_17h20p36%29_signed.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\1_20230726_174757_6.-Thong-bao-tuyen-sinh-Ban-moi-thang-6-nam-2023-Cap-nhat-quy-che-TS%2812.06.2023_17h20p36%29_signed.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\932494569_133311828213774534_khanhly.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\932494569_133311828213834690_hbkhanhly.pdf" />
-    <Content Include="Uploads\DKXTHocBaFile\UploadedFiles.rar" />
-    <Content Include="Uploads\LienCapTieuHoc\GiayKhaiSinh\2_133330916848989651_vd.pdf" />
     <Content Include="Views\ThiSinhDangKies\Edit.cshtml" />
     <Content Include="Views\ThiSinhDangKies\Index.cshtml" />
     <Content Include="Views\DangKyXetTuyens\Dkxtthptqg.cshtml" />
@@ -767,15 +588,23 @@
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Views\ExportDatas\" />
     <Folder Include="Areas\Admin\Views\LibraryJson\" />
+    <Folder Include="Uploads\DKDTNangKhieuFile\" />
     <Folder Include="Uploads\DkSauDaiHocFile\" />
+    <Folder Include="Uploads\DKXTHocBaFile\" />
     <Folder Include="Uploads\DKXTKQTTHPTQGFile\" />
     <Folder Include="Uploads\FileMinhChungKinhPhis\" />
+    <Folder Include="Uploads\LienCapTieuHoc\GiayKhaiSinh\" />
+    <Folder Include="Uploads\LienCapTieuHoc\GiayUuTien\" />
     <Folder Include="Uploads\LienCapTieuHoc\MaDinhDanh\" />
+    <Folder Include="Uploads\LienCapTieuHoc\MinhChungLePhi\" />
+    <Folder Include="Uploads\LienCapTieuHoc\MinhChungMN\" />
     <Folder Include="Uploads\LienCap\DinhDanh\" />
     <Folder Include="Uploads\LienCap\GiayKhaiSinh\" />
     <Folder Include="Uploads\LienCap\GiayUuTien\" />
+    <Folder Include="Uploads\LienCap\HocBa\" />
     <Folder Include="Uploads\LienCap\LePhi\" />
     <Folder Include="Uploads\UploadMinhChungs\" />
+    <Folder Include="Views\ThongBao\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
